classDiagram
    class Concept {
        +String Name
        +List~Attribute~ Attributes
        +List~Rule~ Rules
        +List~Function~ Funcs
        +List~Relation~ Relations
    }
    
    class Attribute {
        +String Name
        +Type DataType
        +Any Value
    }
    
    class Rule {
        +String RuleID
        +Condition LHS
        +Action RHS
        +evaluate() Boolean
    }
    
    class Function {
        +String FuncName
        +Expression Expr
        +calculate() Number
    }
    
    class Relation {
        +String RelType
        +Concept Target
    }
    
    Concept "1" *-- "many" Attribute : has
    Concept "1" *-- "many" Rule : contains
    Concept "1" *-- "many" Function : computes
    Concept "1" *-- "many" Relation : linked to
